fix row image link, remove scrollbar

--- a/netflixclone/styles/globals.css
+++ b/netflixclone/styles/globals.css
@@ -20,6 +20,11 @@ a {
 }
 
 @layer utilities {
+
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    } 
+
     .no-scrollbar {
       -ms-overflow-style: none;  /* IE and Edge */
       scrollbar-width: none;  /* Firefox */
